--- a/package.json
+++ b/package.json
@@ -7,6 +7,16 @@
   },
   "dependencies": {
     "react": "15.1.0",
-    "react-native": "0.28.0"
+    "react-native": "0.28.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.2"
   }
 }
