--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "react": "15.1.0",
+    "react-mixin": "^3.0.5",
     "react-native": "0.28.0",
     "react-native-activity-indicator-ios": "^1.0.4",
     "react-redux": "^4.4.5",
+    "react-tween-state": "^0.1.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
   },
