--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-mixin": "^3.0.5",
     "react-native": "0.28.0",
     "react-native-activity-indicator-ios": "^1.0.4",
+    "react-native-loading-spinner-overlay": "^0.3.0",
     "react-redux": "^4.4.5",
     "react-tween-state": "^0.1.5",
     "redux": "^3.5.2",
